# quickfix

./: README.md  configure.ac
examples/: CMakeLists.txt  Makefile.am
examples/icmarketsclient/: CMakeLists.txt  FixApp.cpp  FixApp.h  Makefile.am  icmarketsclient.cpp  settings.cfg
src/C++/: SocketInitiator.cpp  ThreadedSocketInitiator.cpp
